y.output
Gramática

    0 $accept: prog $end

    1 prog: subprogs main

    2 subprogs: ε
    3         | subprog subprogs

    4 subprog: TYPE FUNCTION ID '(' args_op ')' cmds END_FUNCTION

    5 args_op: ε
    6        | args

    7 args: arg
    8     | arg ';' args

    9 arg: TYPE ids
   10    | TYPE ids ',' arg

   11 ids: ID

   12 main: MAIN cmds END_MAIN

   13 cmds: ε
   14     | cmd cmds

   15 cmd: cond
   16    | return
   17    | write
   18    | iteration
   19    | TYPE ID ASSIGN exp ';'
   20    | TYPE exp ';'
   21    | TYPE exp ',' cmd
   22    | exp ',' cmd
   23    | exp ';'
   24    | ID ASSIGN exp ';'
   25    | ID INCREMENT ';'
   26    | ID DECREMENT ';'
   27    | INCREMENT ID ';'
   28    | DECREMENT ID ';'
   29    | ID INCREMENT_ASSIGN exp ';'
   30    | ID DECREMENT_ASSIGN exp ';'

   31 cond: IF exp THEN cmds END_IF
   32     | IF exp THEN cmds ELSE cmds END_IF

   33 return: RETURN exp ';'

   34 write: PRINT '(' exps ')' ';'

   35 iteration: WHILE '(' exp ')' cmds END_WHILE
   36          | FOR '(' for_init ';' for_cond ';' for_incr ')' cmds END_FOR
   37          | FOR '(' for_init_declaration ';' for_cond ';' for_incr ')' cmds END_FOR

   38 for_init: ID ASSIGN exp
   39         | ID

   40 for_init_declaration: TYPE ID ASSIGN exp

   41 for_cond: exp

   42 for_incr: ID INCREMENT
   43         | ID DECREMENT
   44         | INCREMENT ID
   45         | DECREMENT ID
   46         | exp

   47 exp: term
   48    | call
   49    | '(' exp ')'
   50    | exp EQUALS term
   51    | exp DIFF term
   52    | exp LESS term
   53    | exp GREATER term
   54    | exp LESSEQUALS term
   55    | exp GREATEREQUALS term
   56    | exp AND term
   57    | exp OR term
   58    | exp XOR term
   59    | NOT exp
   60    | exp PLUS term
   61    | exp MINUS term
   62    | exp MULT term
   63    | exp DIVISION term
   64    | exp EXPOENT term

   65 term: factor

   66 factor: ID
   67       | INT
   68       | FLOAT
   69       | DOUBLE
   70       | BOOL_LIT
   71       | STRING_LIT

   72 call: ID '(' exps_op ')'

   73 exps_op: ε
   74        | exps

   75 exps: exp
   76     | exp ',' exps


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '(' (40) 4 34 35 36 37 49 72
    ')' (41) 4 34 35 36 37 49 72
    ',' (44) 10 21 22 76
    ';' (59) 8 19 20 23 24 25 26 27 28 29 30 33 34 36 37
    error (256)
    FUNCTION (258) 4
    END_FUNCTION (259) 4
    IF (260) 31 32
    THEN (261) 31 32
    ELSE (262) 32
    END_IF (263) 31 32
    WHILE (264) 35
    END_WHILE (265) 35
    FOR (266) 36 37
    END_FOR (267) 36 37
    ASSIGN (268) 19 24 38 40
    MAIN (269) 12
    END_MAIN (270) 12
    PRINT (271) 34
    RETURN (272) 33
    EQUALS (273) 50
    DIFF (274) 51
    LESS (275) 52
    GREATER (276) 53
    LESSEQUALS (277) 54
    GREATEREQUALS (278) 55
    AND (279) 56
    OR (280) 57
    XOR (281) 58
    NOT (282) 59
    TYPE <sValue> (283) 4 9 10 19 20 21 40
    STRING_LIT <sValue> (284) 71
    BOOL_LIT <sValue> (285) 70
    ID <sValue> (286) 4 11 19 24 25 26 27 28 29 30 38 39 40 42 43 44 45 66 72
    INT <sValue> (287) 67
    FLOAT <sValue> (288) 68
    DOUBLE <sValue> (289) 69
    INCREMENT <sValue> (290) 25 27 42 44
    DECREMENT <sValue> (291) 26 28 43 45
    INCREMENT_ASSIGN <sValue> (292) 29
    DECREMENT_ASSIGN <sValue> (293) 30
    PLUS <sValue> (294) 60
    MINUS <sValue> (295) 61
    MULT <sValue> (296) 62
    DIVISION <sValue> (297) 63
    EXPOENT <sValue> (298) 64


Não terminais com as regras onde eles aparecem

    $accept (48)
        à esquerda: 0
    prog (49)
        à esquerda: 1
        à direita: 0
    subprogs <rec> (50)
        à esquerda: 2 3
        à direita: 1 3
    subprog <rec> (51)
        à esquerda: 4
        à direita: 3
    args_op <rec> (52)
        à esquerda: 5 6
        à direita: 4
    args <rec> (53)
        à esquerda: 7 8
        à direita: 6 8
    arg <rec> (54)
        à esquerda: 9 10
        à direita: 7 8 10
    ids <rec> (55)
        à esquerda: 11
        à direita: 9 10
    main <rec> (56)
        à esquerda: 12
        à direita: 1
    cmds <rec> (57)
        à esquerda: 13 14
        à direita: 4 12 14 31 32 35 36 37
    cmd <rec> (58)
        à esquerda: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
        à direita: 14 21 22
    cond <rec> (59)
        à esquerda: 31 32
        à direita: 15
    return <rec> (60)
        à esquerda: 33
        à direita: 16
    write <rec> (61)
        à esquerda: 34
        à direita: 17
    iteration <rec> (62)
        à esquerda: 35 36 37
        à direita: 18
    for_init <rec> (63)
        à esquerda: 38 39
        à direita: 36
    for_init_declaration <rec> (64)
        à esquerda: 40
        à direita: 37
    for_cond <rec> (65)
        à esquerda: 41
        à direita: 36 37
    for_incr <rec> (66)
        à esquerda: 42 43 44 45 46
        à direita: 36 37
    exp <rec> (67)
        à esquerda: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
        à direita: 19 20 21 22 23 24 29 30 31 32 33 35 38 40 41 46 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 75 76
    term <rec> (68)
        à esquerda: 65
        à direita: 47 50 51 52 53 54 55 56 57 58 60 61 62 63 64
    factor <rec> (69)
        à esquerda: 66 67 68 69 70 71
        à direita: 65
    call <rec> (70)
        à esquerda: 72
        à direita: 48
    exps_op <rec> (71)
        à esquerda: 73 74
        à direita: 72
    exps <rec> (72)
        à esquerda: 75 76
        à direita: 34 74 76


Estado 0

    0 $accept: • prog $end

    TYPE  deslocar, e ir ao estado 1

    $padrão  reduzir usando a regra 2 (subprogs)

    prog      ir ao estado 2
    subprogs  ir ao estado 3
    subprog   ir ao estado 4


Estado 1

    4 subprog: TYPE • FUNCTION ID '(' args_op ')' cmds END_FUNCTION

    FUNCTION  deslocar, e ir ao estado 5


Estado 2

    0 $accept: prog • $end

    $end  deslocar, e ir ao estado 6


Estado 3

    1 prog: subprogs • main

    MAIN  deslocar, e ir ao estado 7

    main  ir ao estado 8


Estado 4

    3 subprogs: subprog • subprogs

    TYPE  deslocar, e ir ao estado 1

    $padrão  reduzir usando a regra 2 (subprogs)

    subprogs  ir ao estado 9
    subprog   ir ao estado 4


Estado 5

    4 subprog: TYPE FUNCTION • ID '(' args_op ')' cmds END_FUNCTION

    ID  deslocar, e ir ao estado 10


Estado 6

    0 $accept: prog $end •

    $padrão  aceitar


Estado 7

   12 main: MAIN • cmds END_MAIN

    IF          deslocar, e ir ao estado 11
    WHILE       deslocar, e ir ao estado 12
    FOR         deslocar, e ir ao estado 13
    PRINT       deslocar, e ir ao estado 14
    RETURN      deslocar, e ir ao estado 15
    NOT         deslocar, e ir ao estado 16
    TYPE        deslocar, e ir ao estado 17
    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 20
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23
    INCREMENT   deslocar, e ir ao estado 24
    DECREMENT   deslocar, e ir ao estado 25
    '('         deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 13 (cmds)

    cmds       ir ao estado 27
    cmd        ir ao estado 28
    cond       ir ao estado 29
    return     ir ao estado 30
    write      ir ao estado 31
    iteration  ir ao estado 32
    exp        ir ao estado 33
    term       ir ao estado 34
    factor     ir ao estado 35
    call       ir ao estado 36


Estado 8

    1 prog: subprogs main •

    $padrão  reduzir usando a regra 1 (prog)


Estado 9

    3 subprogs: subprog subprogs •

    $padrão  reduzir usando a regra 3 (subprogs)


Estado 10

    4 subprog: TYPE FUNCTION ID • '(' args_op ')' cmds END_FUNCTION

    '('  deslocar, e ir ao estado 37


Estado 11

   31 cond: IF • exp THEN cmds END_IF
   32     | IF • exp THEN cmds ELSE cmds END_IF

    NOT         deslocar, e ir ao estado 16
    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 38
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23
    '('         deslocar, e ir ao estado 26

    exp     ir ao estado 39
    term    ir ao estado 34
    factor  ir ao estado 35
    call    ir ao estado 36


Estado 12

   35 iteration: WHILE • '(' exp ')' cmds END_WHILE

    '('  deslocar, e ir ao estado 40


Estado 13

   36 iteration: FOR • '(' for_init ';' for_cond ';' for_incr ')' cmds END_FOR
   37          | FOR • '(' for_init_declaration ';' for_cond ';' for_incr ')' cmds END_FOR

    '('  deslocar, e ir ao estado 41


Estado 14

   34 write: PRINT • '(' exps ')' ';'

    '('  deslocar, e ir ao estado 42


Estado 15

   33 return: RETURN • exp ';'

    NOT         deslocar, e ir ao estado 16
    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 38
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23
    '('         deslocar, e ir ao estado 26

    exp     ir ao estado 43
    term    ir ao estado 34
    factor  ir ao estado 35
    call    ir ao estado 36


Estado 16

   59 exp: NOT • exp

    NOT         deslocar, e ir ao estado 16
    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 38
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23
    '('         deslocar, e ir ao estado 26

    exp     ir ao estado 44
    term    ir ao estado 34
    factor  ir ao estado 35
    call    ir ao estado 36


Estado 17

   19 cmd: TYPE • ID ASSIGN exp ';'
   20    | TYPE • exp ';'
   21    | TYPE • exp ',' cmd

    NOT         deslocar, e ir ao estado 16
    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 45
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23
    '('         deslocar, e ir ao estado 26

    exp     ir ao estado 46
    term    ir ao estado 34
    factor  ir ao estado 35
    call    ir ao estado 36


Estado 18

   71 factor: STRING_LIT •

    $padrão  reduzir usando a regra 71 (factor)


Estado 19

   70 factor: BOOL_LIT •

    $padrão  reduzir usando a regra 70 (factor)


Estado 20

   24 cmd: ID • ASSIGN exp ';'
   25    | ID • INCREMENT ';'
   26    | ID • DECREMENT ';'
   29    | ID • INCREMENT_ASSIGN exp ';'
   30    | ID • DECREMENT_ASSIGN exp ';'
   66 factor: ID •
   72 call: ID • '(' exps_op ')'

    ASSIGN            deslocar, e ir ao estado 47
    INCREMENT         deslocar, e ir ao estado 48
    DECREMENT         deslocar, e ir ao estado 49
    INCREMENT_ASSIGN  deslocar, e ir ao estado 50
    DECREMENT_ASSIGN  deslocar, e ir ao estado 51
    '('               deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 66 (factor)


Estado 21

   67 factor: INT •

    $padrão  reduzir usando a regra 67 (factor)


Estado 22

   68 factor: FLOAT •

    $padrão  reduzir usando a regra 68 (factor)


Estado 23

   69 factor: DOUBLE •

    $padrão  reduzir usando a regra 69 (factor)


Estado 24

   27 cmd: INCREMENT • ID ';'

    ID  deslocar, e ir ao estado 53


Estado 25

   28 cmd: DECREMENT • ID ';'

    ID  deslocar, e ir ao estado 54


Estado 26

   49 exp: '(' • exp ')'

    NOT         deslocar, e ir ao estado 16
    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 38
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23
    '('         deslocar, e ir ao estado 26

    exp     ir ao estado 55
    term    ir ao estado 34
    factor  ir ao estado 35
    call    ir ao estado 36


Estado 27

   12 main: MAIN cmds • END_MAIN

    END_MAIN  deslocar, e ir ao estado 56


Estado 28

   14 cmds: cmd • cmds

    IF          deslocar, e ir ao estado 11
    WHILE       deslocar, e ir ao estado 12
    FOR         deslocar, e ir ao estado 13
    PRINT       deslocar, e ir ao estado 14
    RETURN      deslocar, e ir ao estado 15
    NOT         deslocar, e ir ao estado 16
    TYPE        deslocar, e ir ao estado 17
    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 20
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23
    INCREMENT   deslocar, e ir ao estado 24
    DECREMENT   deslocar, e ir ao estado 25
    '('         deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 13 (cmds)

    cmds       ir ao estado 57
    cmd        ir ao estado 28
    cond       ir ao estado 29
    return     ir ao estado 30
    write      ir ao estado 31
    iteration  ir ao estado 32
    exp        ir ao estado 33
    term       ir ao estado 34
    factor     ir ao estado 35
    call       ir ao estado 36


Estado 29

   15 cmd: cond •

    $padrão  reduzir usando a regra 15 (cmd)


Estado 30

   16 cmd: return •

    $padrão  reduzir usando a regra 16 (cmd)


Estado 31

   17 cmd: write •

    $padrão  reduzir usando a regra 17 (cmd)


Estado 32

   18 cmd: iteration •

    $padrão  reduzir usando a regra 18 (cmd)


Estado 33

   22 cmd: exp • ',' cmd
   23    | exp • ';'
   50 exp: exp • EQUALS term
   51    | exp • DIFF term
   52    | exp • LESS term
   53    | exp • GREATER term
   54    | exp • LESSEQUALS term
   55    | exp • GREATEREQUALS term
   56    | exp • AND term
   57    | exp • OR term
   58    | exp • XOR term
   60    | exp • PLUS term
   61    | exp • MINUS term
   62    | exp • MULT term
   63    | exp • DIVISION term
   64    | exp • EXPOENT term

    EQUALS         deslocar, e ir ao estado 58
    DIFF           deslocar, e ir ao estado 59
    LESS           deslocar, e ir ao estado 60
    GREATER        deslocar, e ir ao estado 61
    LESSEQUALS     deslocar, e ir ao estado 62
    GREATEREQUALS  deslocar, e ir ao estado 63
    AND            deslocar, e ir ao estado 64
    OR             deslocar, e ir ao estado 65
    XOR            deslocar, e ir ao estado 66
    PLUS           deslocar, e ir ao estado 67
    MINUS          deslocar, e ir ao estado 68
    MULT           deslocar, e ir ao estado 69
    DIVISION       deslocar, e ir ao estado 70
    EXPOENT        deslocar, e ir ao estado 71
    ';'            deslocar, e ir ao estado 72
    ','            deslocar, e ir ao estado 73


Estado 34

   47 exp: term •

    $padrão  reduzir usando a regra 47 (exp)


Estado 35

   65 term: factor •

    $padrão  reduzir usando a regra 65 (term)


Estado 36

   48 exp: call •

    $padrão  reduzir usando a regra 48 (exp)


Estado 37

    4 subprog: TYPE FUNCTION ID '(' • args_op ')' cmds END_FUNCTION

    TYPE  deslocar, e ir ao estado 74

    $padrão  reduzir usando a regra 5 (args_op)

    args_op  ir ao estado 75
    args     ir ao estado 76
    arg      ir ao estado 77


Estado 38

   66 factor: ID •
   72 call: ID • '(' exps_op ')'

    '('  deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 66 (factor)


Estado 39

   31 cond: IF exp • THEN cmds END_IF
   32     | IF exp • THEN cmds ELSE cmds END_IF
   50 exp: exp • EQUALS term
   51    | exp • DIFF term
   52    | exp • LESS term
   53    | exp • GREATER term
   54    | exp • LESSEQUALS term
   55    | exp • GREATEREQUALS term
   56    | exp • AND term
   57    | exp • OR term
   58    | exp • XOR term
   60    | exp • PLUS term
   61    | exp • MINUS term
   62    | exp • MULT term
   63    | exp • DIVISION term
   64    | exp • EXPOENT term

    THEN           deslocar, e ir ao estado 78
    EQUALS         deslocar, e ir ao estado 58
    DIFF           deslocar, e ir ao estado 59
    LESS           deslocar, e ir ao estado 60
    GREATER        deslocar, e ir ao estado 61
    LESSEQUALS     deslocar, e ir ao estado 62
    GREATEREQUALS  deslocar, e ir ao estado 63
    AND            deslocar, e ir ao estado 64
    OR             deslocar, e ir ao estado 65
    XOR            deslocar, e ir ao estado 66
    PLUS           deslocar, e ir ao estado 67
    MINUS          deslocar, e ir ao estado 68
    MULT           deslocar, e ir ao estado 69
    DIVISION       deslocar, e ir ao estado 70
    EXPOENT        deslocar, e ir ao estado 71


Estado 40

   35 iteration: WHILE '(' • exp ')' cmds END_WHILE

    NOT         deslocar, e ir ao estado 16
    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 38
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23
    '('         deslocar, e ir ao estado 26

    exp     ir ao estado 79
    term    ir ao estado 34
    factor  ir ao estado 35
    call    ir ao estado 36


Estado 41

   36 iteration: FOR '(' • for_init ';' for_cond ';' for_incr ')' cmds END_FOR
   37          | FOR '(' • for_init_declaration ';' for_cond ';' for_incr ')' cmds END_FOR

    TYPE  deslocar, e ir ao estado 80
    ID    deslocar, e ir ao estado 81

    for_init              ir ao estado 82
    for_init_declaration  ir ao estado 83


Estado 42

   34 write: PRINT '(' • exps ')' ';'

    NOT         deslocar, e ir ao estado 16
    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 38
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23
    '('         deslocar, e ir ao estado 26

    exp     ir ao estado 84
    term    ir ao estado 34
    factor  ir ao estado 35
    call    ir ao estado 36
    exps    ir ao estado 85


Estado 43

   33 return: RETURN exp • ';'
   50 exp: exp • EQUALS term
   51    | exp • DIFF term
   52    | exp • LESS term
   53    | exp • GREATER term
   54    | exp • LESSEQUALS term
   55    | exp • GREATEREQUALS term
   56    | exp • AND term
   57    | exp • OR term
   58    | exp • XOR term
   60    | exp • PLUS term
   61    | exp • MINUS term
   62    | exp • MULT term
   63    | exp • DIVISION term
   64    | exp • EXPOENT term

    EQUALS         deslocar, e ir ao estado 58
    DIFF           deslocar, e ir ao estado 59
    LESS           deslocar, e ir ao estado 60
    GREATER        deslocar, e ir ao estado 61
    LESSEQUALS     deslocar, e ir ao estado 62
    GREATEREQUALS  deslocar, e ir ao estado 63
    AND            deslocar, e ir ao estado 64
    OR             deslocar, e ir ao estado 65
    XOR            deslocar, e ir ao estado 66
    PLUS           deslocar, e ir ao estado 67
    MINUS          deslocar, e ir ao estado 68
    MULT           deslocar, e ir ao estado 69
    DIVISION       deslocar, e ir ao estado 70
    EXPOENT        deslocar, e ir ao estado 71
    ';'            deslocar, e ir ao estado 86


Estado 44

   50 exp: exp • EQUALS term
   51    | exp • DIFF term
   52    | exp • LESS term
   53    | exp • GREATER term
   54    | exp • LESSEQUALS term
   55    | exp • GREATEREQUALS term
   56    | exp • AND term
   57    | exp • OR term
   58    | exp • XOR term
   59    | NOT exp •
   60    | exp • PLUS term
   61    | exp • MINUS term
   62    | exp • MULT term
   63    | exp • DIVISION term
   64    | exp • EXPOENT term

    $padrão  reduzir usando a regra 59 (exp)


Estado 45

   19 cmd: TYPE ID • ASSIGN exp ';'
   66 factor: ID •
   72 call: ID • '(' exps_op ')'

    ASSIGN  deslocar, e ir ao estado 87
    '('     deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 66 (factor)


Estado 46

   20 cmd: TYPE exp • ';'
   21    | TYPE exp • ',' cmd
   50 exp: exp • EQUALS term
   51    | exp • DIFF term
   52    | exp • LESS term
   53    | exp • GREATER term
   54    | exp • LESSEQUALS term
   55    | exp • GREATEREQUALS term
   56    | exp • AND term
   57    | exp • OR term
   58    | exp • XOR term
   60    | exp • PLUS term
   61    | exp • MINUS term
   62    | exp • MULT term
   63    | exp • DIVISION term
   64    | exp • EXPOENT term

    EQUALS         deslocar, e ir ao estado 58
    DIFF           deslocar, e ir ao estado 59
    LESS           deslocar, e ir ao estado 60
    GREATER        deslocar, e ir ao estado 61
    LESSEQUALS     deslocar, e ir ao estado 62
    GREATEREQUALS  deslocar, e ir ao estado 63
    AND            deslocar, e ir ao estado 64
    OR             deslocar, e ir ao estado 65
    XOR            deslocar, e ir ao estado 66
    PLUS           deslocar, e ir ao estado 67
    MINUS          deslocar, e ir ao estado 68
    MULT           deslocar, e ir ao estado 69
    DIVISION       deslocar, e ir ao estado 70
    EXPOENT        deslocar, e ir ao estado 71
    ';'            deslocar, e ir ao estado 88
    ','            deslocar, e ir ao estado 89


Estado 47

   24 cmd: ID ASSIGN • exp ';'

    NOT         deslocar, e ir ao estado 16
    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 38
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23
    '('         deslocar, e ir ao estado 26

    exp     ir ao estado 90
    term    ir ao estado 34
    factor  ir ao estado 35
    call    ir ao estado 36


Estado 48

   25 cmd: ID INCREMENT • ';'

    ';'  deslocar, e ir ao estado 91


Estado 49

   26 cmd: ID DECREMENT • ';'

    ';'  deslocar, e ir ao estado 92


Estado 50

   29 cmd: ID INCREMENT_ASSIGN • exp ';'

    NOT         deslocar, e ir ao estado 16
    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 38
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23
    '('         deslocar, e ir ao estado 26

    exp     ir ao estado 93
    term    ir ao estado 34
    factor  ir ao estado 35
    call    ir ao estado 36


Estado 51

   30 cmd: ID DECREMENT_ASSIGN • exp ';'

    NOT         deslocar, e ir ao estado 16
    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 38
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23
    '('         deslocar, e ir ao estado 26

    exp     ir ao estado 94
    term    ir ao estado 34
    factor  ir ao estado 35
    call    ir ao estado 36


Estado 52

   72 call: ID '(' • exps_op ')'

    NOT         deslocar, e ir ao estado 16
    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 38
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23
    '('         deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 73 (exps_op)

    exp      ir ao estado 84
    term     ir ao estado 34
    factor   ir ao estado 35
    call     ir ao estado 36
    exps_op  ir ao estado 95
    exps     ir ao estado 96


Estado 53

   27 cmd: INCREMENT ID • ';'

    ';'  deslocar, e ir ao estado 97


Estado 54

   28 cmd: DECREMENT ID • ';'

    ';'  deslocar, e ir ao estado 98


Estado 55

   49 exp: '(' exp • ')'
   50    | exp • EQUALS term
   51    | exp • DIFF term
   52    | exp • LESS term
   53    | exp • GREATER term
   54    | exp • LESSEQUALS term
   55    | exp • GREATEREQUALS term
   56    | exp • AND term
   57    | exp • OR term
   58    | exp • XOR term
   60    | exp • PLUS term
   61    | exp • MINUS term
   62    | exp • MULT term
   63    | exp • DIVISION term
   64    | exp • EXPOENT term

    EQUALS         deslocar, e ir ao estado 58
    DIFF           deslocar, e ir ao estado 59
    LESS           deslocar, e ir ao estado 60
    GREATER        deslocar, e ir ao estado 61
    LESSEQUALS     deslocar, e ir ao estado 62
    GREATEREQUALS  deslocar, e ir ao estado 63
    AND            deslocar, e ir ao estado 64
    OR             deslocar, e ir ao estado 65
    XOR            deslocar, e ir ao estado 66
    PLUS           deslocar, e ir ao estado 67
    MINUS          deslocar, e ir ao estado 68
    MULT           deslocar, e ir ao estado 69
    DIVISION       deslocar, e ir ao estado 70
    EXPOENT        deslocar, e ir ao estado 71
    ')'            deslocar, e ir ao estado 99


Estado 56

   12 main: MAIN cmds END_MAIN •

    $padrão  reduzir usando a regra 12 (main)


Estado 57

   14 cmds: cmd cmds •

    $padrão  reduzir usando a regra 14 (cmds)


Estado 58

   50 exp: exp EQUALS • term

    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 100
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23

    term    ir ao estado 101
    factor  ir ao estado 35


Estado 59

   51 exp: exp DIFF • term

    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 100
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23

    term    ir ao estado 102
    factor  ir ao estado 35


Estado 60

   52 exp: exp LESS • term

    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 100
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23

    term    ir ao estado 103
    factor  ir ao estado 35


Estado 61

   53 exp: exp GREATER • term

    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 100
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23

    term    ir ao estado 104
    factor  ir ao estado 35


Estado 62

   54 exp: exp LESSEQUALS • term

    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 100
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23

    term    ir ao estado 105
    factor  ir ao estado 35


Estado 63

   55 exp: exp GREATEREQUALS • term

    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 100
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23

    term    ir ao estado 106
    factor  ir ao estado 35


Estado 64

   56 exp: exp AND • term

    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 100
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23

    term    ir ao estado 107
    factor  ir ao estado 35


Estado 65

   57 exp: exp OR • term

    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 100
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23

    term    ir ao estado 108
    factor  ir ao estado 35


Estado 66

   58 exp: exp XOR • term

    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 100
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23

    term    ir ao estado 109
    factor  ir ao estado 35


Estado 67

   60 exp: exp PLUS • term

    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 100
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23

    term    ir ao estado 110
    factor  ir ao estado 35


Estado 68

   61 exp: exp MINUS • term

    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 100
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23

    term    ir ao estado 111
    factor  ir ao estado 35


Estado 69

   62 exp: exp MULT • term

    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 100
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23

    term    ir ao estado 112
    factor  ir ao estado 35


Estado 70

   63 exp: exp DIVISION • term

    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 100
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23

    term    ir ao estado 113
    factor  ir ao estado 35


Estado 71

   64 exp: exp EXPOENT • term

    STRING_LIT  deslocar, e ir ao estado 18
    BOOL_LIT    deslocar, e ir ao estado 19
    ID          deslocar, e ir ao estado 100
    INT         deslocar, e ir ao estado 21
    FLOAT       deslocar, e ir ao estado 22
    DOUBLE      deslocar, e ir ao estado 23

    term    ir ao estado 114
    factor  ir ao estado 35


Estado 72

   23 cmd: exp ';' •
